@@ -1,5 +1,4 @@
 pytest
-Flask-Script
 webassets
 PyYAML
 pyScss
