@@ -12,8 +12,6 @@ exceptiongroup==1.1.3
     # via pytest
 flask==3.0.0
     # via flask-script
-flask-script==2.0.6
-    # via -r requirements.in
 iniconfig==2.0.0
     # via pytest
 itsdangerous==2.1.2
