@@ -370,97 +370,6 @@ class Environment(BaseEnvironment):
         for name in bundles:
             self.register(name, bundles[name])
 
-try:
-    import flask_script as script
-except ImportError:
-    pass
-else:
-    import argparse
-    from webassets.script import GenericArgparseImplementation, CommandError
-
-    class FlaskArgparseInterface(GenericArgparseImplementation):
-        """Subclass the CLI implementation to add a --parse-templates option."""
-
-        def _construct_parser(self, *a, **kw):
-            super(FlaskArgparseInterface, self).\
-                _construct_parser(*a, **kw)
-            self.parser.add_argument(
-                '--jinja-extension', default='*.html',
-                help='specify the glob pattern for Jinja extensions (default: *.html)')
-            self.parser.add_argument(
-                '--parse-templates', action='store_true',
-                help='search project templates to find bundles')
-
-        def _setup_assets_env(self, ns, log):
-            env = super(FlaskArgparseInterface, self)._setup_assets_env(ns, log)
-            if env is not None:
-                if ns.parse_templates:
-                    log.info('Searching templates...')
-                    # Note that we exclude container bundles. By their very nature,
-                    # they are guaranteed to have been created by solely referencing
-                    # other bundles which are already registered.
-                    env.add(*[b for b in self.load_from_templates(env, ns.jinja_extension)
-                                    if not b.is_container])
-
-                if not len(env):
-                    raise CommandError(
-                        'No asset bundles were found. '
-                        'If you are defining assets directly within '
-                        'your templates, you want to use the '
-                        '--parse-templates option.')
-            return env
-
-        def load_from_templates(self, env, jinja_extension):
-            from webassets.ext.jinja2 import Jinja2Loader, AssetsExtension
-            from flask import current_app as app
-
-            # Use the application's Jinja environment to parse
-            jinja2_env = app.jinja_env
-
-            # Get the template directories of app and blueprints
-            template_dirs = [path.join(app.root_path, app.template_folder)]
-            for blueprint in app.blueprints.values():
-                if blueprint.template_folder is None:
-                    continue
-                template_dirs.append(
-                    path.join(blueprint.root_path, blueprint.template_folder))
-
-            return Jinja2Loader(env, template_dirs, [jinja2_env], jinja_ext=jinja_extension).\
-                load_bundles()
-
-    class ManageAssets(script.Command):
-        """Manage assets."""
-        capture_all_args = True
-
-        def __init__(self, assets_env=None, impl=FlaskArgparseInterface,
-                     log=None):
-            self.env = assets_env
-            self.implementation = impl
-            self.log = log
-
-        def run(self, args):
-            """Runs the management script.
-            If ``self.env`` is not defined, it will import it from
-            ``current_app``.
-            """
-
-            if not self.env:
-                from flask import current_app
-                self.env = current_app.jinja_env.assets_environment
-
-            # Determine 'prog' - something like for example
-            # "./manage.py assets", to be shown in the help string.
-            # While we don't know the command name we are registered with
-            # in Flask-Assets, we are lucky to be able to rely on the
-            # name being in argv[1].
-            import sys, os.path
-            prog = '%s %s' % (os.path.basename(sys.argv[0]), sys.argv[1])
-
-            impl = self.implementation(self.env, prog=prog, log=self.log)
-            return impl.main(args)
-
-    __all__ = __all__ + ('ManageAssets',)
-
 
 try:
     import click
