@@ -1,4 +1,5 @@
 2.1.1 (Unreleased)
+    - Drop Flask-Script legacy support
 
 2.1.0 (2023-10-22)
     - Drop Python 2.x support.
